# ant-quic

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  Cross.toml  Dockerfile  GEMINI.md  README.md  SECURITY.md  autoresearch.ideas.md  autoresearch.jsonl  cliff.toml  deny.toml  justfile  testnet_monitor.sh
.benchmarks/: results-20260206-004339-4c0a8434d4e6d1ba31dc1d689d7c567e59e47334.json  results-20260211-191929-952a13be08223bf0b07b6e6fb1d6c08958713f02.json  results-20260328-225958-1a8ff17adb3e7df6a3f04f7911e5ea7f03f94957.json  results-20260419-172226-8bf20482cb6e12724e01bd50bfab1583d5ed79b7.json  results-20260427-231709-afa8d8e1f63c9002852e13fa2f57edfe7d52a3dc.json  results-20260516-185638-d9902a13d41e58a15b342b848b834e7af28d30b1.json  results-20260620-211303-a1e7207949b46a302b03defd4506ec8bb9a64e1a.json  results-20260723-134536-10473dfee0530215e41dddd1fd33141b99ade2eb.json
.cargo/: audit.toml
.config/: hakari.toml  nextest.toml
.githooks/: pre-push
.github/: CONTRIBUTING.md
ant-quic-workspace-hack/: Cargo.toml
autoresearch/: bench.sh
benches/: address_discovery_bench.rs  candidate_discovery.rs  nat_traversal.rs
docs/: FUTURE_WORK.md  NAT_TRAVERSAL_GUIDE.md  TROUBLESHOOTING.md  public-quic-endpoints.yaml  saorsa-bootstrap-nodes.yaml
examples/: ble_chat.rs  throughput_test.rs
scripts/: pqc-release-validation.sh  run-connectivity-matrix.sh  run-cross-env-matrix.sh  run-local-nat-tests.sh  run-zigbuild-e2e.sh  security-validation.sh  vps-test-orchestrator.sh
src/: ack_frame.rs  candidate_discovery.rs  chat.rs  cid_generator.rs  coding.rs  congestion.rs  connection_lifecycle.rs  connection_strategy.rs  constant_time.rs  coordinator_control.rs  coordinator_health.rs  crypto.rs  discovery_trait.rs  endpoint.rs  error_handling.rs  frame.rs  happy_eyeballs.rs  lib.rs  link_transport.rs  link_transport_impl.rs  mdns.rs  nat_traversal_api.rs  node.rs  node_config.rs  node_event.rs  node_status.rs  p2p_endpoint.rs  packet.rs  path.rs  peer_directory.rs  port_mapping.rs  reachability.rs  shared.rs  stats_dashboard.rs  token.rs  token_memory_cache.rs  token_v2.rs  transport_error.rs  transport_parameters.rs  unified_config.rs  (+1 more)
src/config/: mod.rs  (+4 more)
tests/: README.md  address_discovery_nat_traversal.rs  address_discovery_security_simple.rs  b_events_parity.rs  b_health_snapshot.rs  b_probe_peer.rs  b_send_fire_and_forget.rs  b_send_with_receive_ack.rs  ble_transport.rs  cli_connect_smoke.rs  compat_address_discovery_e2e.rs  compat_address_discovery_integration.rs  compat_address_discovery_integration_simple.rs  compat_datagram_drop_tests.rs  compat_ipv4_ipv6_nat_verification.rs  compat_multi_client_mixed_traffic.rs  compat_nat_traversal_mixed_format.rs  compat_observed_address_frame_flow.rs  compat_pqc_integration_final.rs  compat_regression_166_accept_uni_race.rs  compat_smoke_quic_connect.rs  comprehensive_p2p_network.rs  config_migration.rs  connection_lifecycle_tests.rs  connection_success_rates.rs  constrained_integration.rs  datagram_drop_tests.rs  designer_flow_nat_proof.rs  discovery.rs  docker_nat_integration.rs  event_migration.rs  external_address_verification.rs  frame_encoding_tests.rs  fuzz_nat_traversal.rs  interop_test.rs  (+59 more)
(+138 files in other folders)
