[package]
name = "ant-quic-workspace-hack"
version = "0.1.0"
edition = "2024"
publish = false

[lib]
path = "src/lib.rs"

### BEGIN HAKARI SECTION
[dependencies]
either = { version = "1", default-features = false, features = ["use_std"] }
libc = { version = "0.2", features = ["extra_traits"] }
log = { version = "0.4", default-features = false, features = ["std"] }
memchr = { version = "2" }
num-traits = { version = "0.2" }
rand = { version = "0.8", features = ["small_rng"] }
rand_chacha = { version = "0.3" }
rand_core = { version = "0.9", default-features = false, features = ["os_rng", "std"] }
serde = { version = "1", features = ["alloc", "derive"] }
serde_core = { version = "1", default-features = false, features = ["alloc", "result", "std"] }
serde_json = { version = "1", features = ["preserve_order"] }
smallvec = { version = "1", default-features = false, features = ["const_generics", "serde"] }
zerocopy = { version = "0.8", default-features = false, features = ["derive", "simd"] }

[build-dependencies]
proc-macro2 = { version = "1" }
quote = { version = "1" }
syn = { version = "2", features = ["extra-traits", "fold", "full", "visit", "visit-mut"] }

### END HAKARI SECTION
