[package]
name = "ant-quic-workspace-hack"
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"
publish = false

[lib]
path = "src/lib.rs"

### BEGIN HAKARI SECTION
[dependencies]
either = { version = "1", default-features = false, features = ["use_std"] }
futures-channel = { version = "0.3", features = ["sink"] }
futures-task = { version = "0.3", default-features = false, features = ["std"] }
futures-util = { version = "0.3", features = ["channel", "io", "sink"] }
hyper = { version = "1", features = ["client", "http1", "http2", "server"] }
hyper-util = { version = "0.1", features = ["client-legacy", "http1", "http2", "server", "service"] }
libc = { version = "0.2", features = ["extra_traits"] }
log = { version = "0.4", default-features = false, features = ["std"] }
memchr = { version = "2" }
mio = { version = "1", features = ["net", "os-ext"] }
num-traits = { version = "0.2" }
percent-encoding = { version = "2" }
rand_core = { version = "0.9", default-features = false, features = ["os_rng", "std"] }
serde = { version = "1", features = ["alloc", "derive"] }
serde_core = { version = "1", default-features = false, features = ["alloc", "result", "std"] }
serde_json = { version = "1", features = ["preserve_order", "raw_value"] }
smallvec = { version = "1", default-features = false, features = ["const_new", "serde"] }
socket2 = { version = "0.5", default-features = false, features = ["all"] }
tokio = { version = "1", features = ["full"] }
tracing = { version = "0.1", features = ["log"] }
tracing-core = { version = "0.1" }
zerocopy = { version = "0.8", default-features = false, features = ["derive", "simd"] }

[build-dependencies]
proc-macro2 = { version = "1" }
quote = { version = "1" }
syn = { version = "2", features = ["extra-traits", "fold", "full", "visit", "visit-mut"] }

### END HAKARI SECTION
